--- a/css original/styles.css
+++ b/css original/styles.css
@@ -5,7 +5,7 @@
 /* черный цвет #000000 */
 /* белый цвет с прозрачностью rgba (255, 255, 255, .60) */
 /* вторичный цвет фона #F5F4FA */
-:root {
+/* :root {
     --primery-text-color: #212121;
     --text-color: #757575;
     --accent-color: #2196F3;
@@ -17,56 +17,56 @@
     --icon-grey-color: #AFB1B8;
 
 
-}
+} */
 
-body {
+/* body {
 font-family: "Roboto", sans-serif;
 font-size: 14px;
 color: var(--primery-text-color);
 
 background: var(--white-color);
-}
+} */
 
-.title {
+/* .title {
     color: var(--primery-text-color);
     font-size: 36px;
     font-weight: 700;
     letter-spacing: 1.08px;
 
     text-align: center;
-}
+} */
 
-.list {
+/* .list {
     list-style: none;
-}
+} */
 
-.link {
+/* .link {
     text-decoration: none
-}
+} */
 
-p, h1, h2, h3 {
+/* p, h1, h2, h3 {
     margin: 0;
     padding: 0;
-}
+} */
 
-ul {
+/* ul {
     margin: 0;
     padding: 0;
-}
+} */
 
-img {
+/* img {
     display: block;
-}
+} */
 
-.container {
+/* .container {
     width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
     margin: 0 auto;
     
-}
+} */
 
-.visually-hidden {
+/* .visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -78,28 +78,29 @@ img {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
+} */
 
-.icon {
+/* .icon {
     margin-right: 10px;
 
     fill: currentColor
 
-}
+} */
+
 /* Header */
-
+/* 
 .header {
-    /* padding-top: 24px;
-    padding-bottom: 24px; */
+    padding-top: 24px;
+    padding-bottom: 24px;
     border-bottom: 1px solid #ECECEC; 
-}
+} */
 
-.header > .container {
+/* .header > .container {
     display: flex;
     align-items: center;
-}
+} */
 
-.logo {
+/* .logo {
     font-size: 26px; 
     font-family: Raleway, sans-serif; 
     font-weight: 700; 
@@ -109,20 +110,20 @@ img {
 }
 .logo-accent {
     color: var(--accent-color);
-}
+} */
 
-.header-nav {
+/* .header-nav {
     display: flex;
-}
+} */
 
-.header-link:hover,
+/* .header-link:hover,
 .header-link:focus,
 .header-address-link:hover,
 .header-address-link:focus {
     color: var(--accent-color);
-}
+} */
 
-.header-list {
+/* .header-list {
     display: flex;
     align-items: center;
     gap: 50px;
@@ -139,9 +140,9 @@ img {
     color: var(--primery-text-color);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.header-link.current::after {
+/* .header-link.current::after {
     content: "";
     position: absolute;
     left: 0;
@@ -151,15 +152,15 @@ img {
         height: 4px;
         background: var(--accent-color);
         border-radius: 2px
-}
+} */
 
-.header-address {
+/* .header-address {
     display: flex;
     gap: 50px;
     margin-left: auto;
-}
+} */
 
-.header-address-link {
+/* .header-address-link {
 color: var(--text-color);
 font-size: 14px; 
 font-weight: 500; 
@@ -173,7 +174,7 @@ display: flex;
 align-items: center;
 
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 
  /* Hero */
@@ -467,7 +468,7 @@ background-color: var(--accent-color);
     display: flex;
 }
 
-.footer-logo {
+/* .footer-logo {
     color: var(--white-color);
     font-family: Raleway;
     font-size: 26px;
@@ -476,7 +477,8 @@ background-color: var(--accent-color);
 
     display: block;
     margin-bottom: 20px;
-}
+} */
+
 
 .address {
     font-style: normal;
