--- a/saas/util/_vars.scss
+++ b/saas/util/_vars.scss
@@ -1,1 +1,14 @@
-$color: black;
+$color-text-primery: #212121;
+$color-text-secondary: #757575;
+$color-accent: #2196F3;
+$color-white: #FFFFFF;
+$color-white-alfa: rgba(255, 255, 255, 0.60);
+$color-bg-whitegrey: #F5F4FA;
+$color-black: #000000;
+$color-bg-darkgrey: #2F303A;
+$color-icon-grey: #AFB1B8;
+$color-card-bg: #EEEEEE;
+$color-hero-bg: #C4C4C4;
+
+$font-primary: "Roboto", sans-serif;
+$font-accent: "Raleway";
