--- a/saas/main.scss
+++ b/saas/main.scss
@@ -3,6 +3,9 @@
 @import './base/global';
 @import './util/logo';
 @import './components/header';
+@import './components/hero';
+@import './components/benefits';
+
 
 
 // %section {
