--- a/css original/styles.css
+++ b/css original/styles.css
@@ -179,7 +179,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  /* Hero */
 
- .hero {
+ /* .hero {
     background: var(--bgcolor);
     background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../images/hero-bg-img.jpg);
     background-repeat: no-repeat;
@@ -195,9 +195,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-bottom: 280px;
     margin-bottom: 94px;
     
- }
+ } */
 
-.hero-title {
+/* .hero-title {
     color: var(--white-color);
     max-width: 696px;
     font-size: 44px;
@@ -208,9 +208,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-}
+} */
 
-.hero-button {
+/* .hero-button {
     background-color: var(--accent-color);
     color: var(--white-color); 
 
@@ -231,7 +231,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     cursor: pointer;
     
-}
+} */
 /* Benefits */
 
 .benefits {
