--- a/css/main.css
+++ b/css/main.css
@@ -78,13 +78,11 @@ textarea {
 .logo__accent {
   color: #2196F3;
 }
-
-.header__logo {
+.logo__header {
   color: #000000;
   margin-right: 93px;
 }
-
-.footer__logo {
+.logo__footer {
   color: #FFFFFF;
   margin-bottom: 20px;
 }
@@ -159,4 +157,103 @@ textarea {
   color: #757575;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero {
+  background: #2F303A;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 280px;
+  margin-bottom: 94px;
+}
+.hero__title {
+  margin-bottom: 30px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 696px;
+  color: #FFFFFF;
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 2.64px;
+}
+.hero__button {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 32px;
+  min-width: 216px;
+  border: none;
+  border-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.96px;
+  background-color: #2196F3;
+  color: #FFFFFF;
+  cursor: pointer;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero__button:hover, .hero__button :focus {
+  background-color: #188CE8;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.benefits {
+  margin-bottom: 94px;
+}
+.benefits__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+.benefits__item {
+  width: calc((100% - 90px) / 4);
+}
+
+.benefits__item:before {
+  display: block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 120px;
+  background-size: 70px;
+  border-radius: 4px;
+  background-color: #F5F4FA;
+}
+
+.benefits__item:nth-child(1):before {
+  content: "";
+  background-image: url(../images/antenna.svg);
+}
+
+.benefits__item:nth-child(2):before {
+  content: "";
+  background-image: url(../images/clock.svg);
+}
+
+.benefits__item:nth-child(3):before {
+  content: "";
+  background-image: url(../images/diagram.svg);
+}
+
+.benefits__item:nth-child(4):before {
+  content: "";
+  background-image: url(../images/astronaut.svg);
 }/*# sourceMappingURL=main.css.map */
