--- a/saas/util/_vars.scss
+++ b/saas/util/_vars.scss
@@ -1,6 +1,7 @@
 $color-text-primery: #212121;
 $color-text-secondary: #757575;
 $color-accent: #2196F3;
+$color-button-accent: #188CE8;
 $color-white: #FFFFFF;
 $color-white-alfa: rgba(255, 255, 255, 0.60);
 $color-bg-whitegrey: #F5F4FA;
