--- a/saas/components/_hero.scss
+++ b/saas/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     background: $color-bg-darkgrey;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../images/hero-bg-img.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
