--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ textarea {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   width: 100%;
   height: 4px;
   background: #2196F3;
@@ -223,6 +223,17 @@ textarea {
 .benefits__item {
   width: calc((100% - 90px) / 4);
 }
+.benefits__title {
+  margin-top: 30px;
+  font-weight: 700;
+  letter-spacing: 0.42px;
+}
+.benefits__text {
+  margin-top: 10px;
+  color: #757575;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
+}
 
 .benefits__item:before {
   content: "";
@@ -234,23 +245,29 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   height: 120px;
-  background-size: 70px;
   border-radius: 4px;
   background-color: #F5F4FA;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .benefits__item:nth-child(1):before {
+  background-size: 70px;
   background-image: url(../images/antenna.svg);
 }
 
 .benefits__item:nth-child(2):before {
+  background-size: 70px;
   background-image: url(../images/clock.svg);
 }
 
 .benefits__item:nth-child(3):before {
+  background-size: 70px;
   background-image: url(../images/diagram.svg);
 }
 
 .benefits__item:nth-child(4):before {
+  background-size: 70px;
   background-image: url(../images/astronaut.svg);
 }/*# sourceMappingURL=main.css.map */
