--- a/saas/main.scss
+++ b/saas/main.scss
@@ -5,6 +5,10 @@
 @import './components/header';
 @import './components/hero';
 @import './components/benefits';
+@import './components/products';
+@import './components/team';
+@import './components/partners';
+@import './components/footer';
 
 
 
