--- a/css original/styles.css
+++ b/css original/styles.css
@@ -274,7 +274,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } */
 /* Products */
 
-.products {
+/* .products {
     margin-bottom: 94px;
 }
 
@@ -319,14 +319,14 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 font-weight: 700;
 letter-spacing: 0.42px;
-}
+} */
 /* Team */
 
 /* background: white;
 box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.20);
 border-top-left-radius: 4px;
 border-top-right-radius: 4px" */
-
+/* 
 .team {
     background-color: var(--button-filter-color);
 
@@ -353,8 +353,8 @@ border-top-right-radius: 4px" */
         0px 1px 1px rgba(0, 0, 0, 0.14), 
         0px 2px 1px rgba(0, 0, 0, 0.2);
             border-radius: 0px 0px 4px 4px;
-}
-
+} */
+/* 
 .team-img {
     margin-bottom: 30px;
 }
@@ -375,9 +375,9 @@ border-top-right-radius: 4px" */
     text-align: center;
 
     margin-bottom: 16px;
-}
+} */
 
-.team-card-social {
+/* .team-card-social {
 margin-bottom: 30px;
 }
 
@@ -409,9 +409,9 @@ background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .social-link:focus {
     color: var(--white-color);
 background-color: var(--accent-color);
-}
+} */
 
-.partners-title {
+/* .partners-title {
     margin-top: 94px;
 }
 
@@ -453,11 +453,11 @@ background-color: var(--accent-color);
 
 .partners-logo {
     fill: currentColor;
-}
+} */
 
 /* Footer */
 
-.footer {
+/* .footer {
     background: var(--bgcolor);
 
     padding-top: 60px;
@@ -466,7 +466,7 @@ background-color: var(--accent-color);
 
 .container-footer {
     display: flex;
-}
+} */
 
 /* .footer-logo {
     color: var(--white-color);
@@ -480,11 +480,11 @@ background-color: var(--accent-color);
 } */
 
 
-.address {
+/* .address {
     font-style: normal;
-}
+} */
 
-.address-location {
+/* .address-location {
     color: var(--white-color); 
     line-height: 1.7; 
     letter-spacing: 0.42px;
@@ -499,9 +499,9 @@ background-color: var(--accent-color);
     color: var(--white-alfa); 
     line-height: 1.7; 
     letter-spacing: 0.42px;
-}
+} */
 
-.join-in {
+/* .join-in {
     margin-left: 70px;
 }
 
@@ -509,6 +509,7 @@ background-color: var(--accent-color);
     color: var(--white-color);
         font-weight: 700;
         letter-spacing: 0.42px;
+        text-transform: uppercase;
 }
 
 .footer-social {
@@ -542,7 +543,7 @@ background-color: var(--accent-color);
 .footer-link:hover,
 .footer-link:focus {
     background-color: var(--accent-color);
-}
+} */
 
 
 /* PORTFOLIO */
@@ -615,9 +616,9 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 
 
 
-.portfolio-card-link {
+/* .portfolio-card-link {
 
-} 
+}  */
 
 /* .portfolio-card-link:hover,
 .portfolio-card-link:focus, {
