--- a/css/main.css
+++ b/css/main.css
@@ -741,7 +741,10 @@ textarea {
 }
 .checkbox:checked + .icon__checkbox {
   background-color: #2196F3;
-  background-image: url(../images/);
+  background-image: url(../images/icon-check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: #2196F3;
 }
 
 .icon__checkbox {
@@ -753,4 +756,5 @@ textarea {
   height: 16px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
