--- a/saas/components/_modal.scss
+++ b/saas/components/_modal.scss
@@ -140,7 +140,10 @@ textarea {
 
     &:checked + .icon__checkbox {
         background-color: $color-accent;
-        background-image: url(../images/)
+        background-image: url(../images/icon-check.svg);
+        background-size: contain;
+        background-origin: border-box;
+        border-color: $color-accent;
     }
 }
 
@@ -153,4 +156,6 @@ textarea {
     width: 16px;
     height: 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    cursor: pointer;
 }
