--- a/css/main.css
+++ b/css/main.css
@@ -726,6 +726,30 @@ textarea {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form__button {
+  display: block;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  background-color: #2196F3;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 0.5;
+  letter-spacing: 0.96px;
+  cursor: pointer;
+  margin-bottom: 40px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__button:hover, .form__button :focus {
+  background-color: #2196F3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
 
 .label__contract {
   display: -webkit-box;
@@ -757,4 +781,14 @@ textarea {
   background-size: contain;
   background-origin: border-box;
   border-color: #2196F3;
+}
+.checkbox__text {
+  line-height: 1.17;
+  color: #757575;
+  margin-right: 4px;
+}
+
+.link__contract {
+  color: #2196F3;
+  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
