--- a/saas/components/_modal.scss
+++ b/saas/components/_modal.scss
@@ -128,6 +128,34 @@ textarea {
 
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+    &__button {
+        display: block;
+        width: 200px;
+        height: 50px;
+
+        margin: 0 auto;
+
+        background-color: $color-accent;
+        color: $color-white;
+
+        border: none;
+        border-radius: 4px;
+
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 0.5;
+        letter-spacing: 0.96px;
+        cursor: pointer;
+        margin-bottom: 40px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover, :focus {
+            background-color: $color-accent;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        }
+    }
 }
 
 .label__contract {
@@ -160,4 +188,15 @@ textarea {
         background-origin: border-box;
         border-color: $color-accent;
     }
+
+    &__text {
+        line-height: 1.17;
+        color: $color-text-secondary;
+        margin-right: 4px;
+    }
+}
+
+.link__contract {
+    color: $color-accent;
+    text-decoration: underline;
 }
