--- a/saas/main.scss
+++ b/saas/main.scss
@@ -10,6 +10,7 @@
 @import './components/partners';
 @import './components/footer';
 @import './components/modal';
+@import './components/portfolio';
 
 
 
